Add first two samples. Starter code only.

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "workspaces": [
     "samples/*"
   ],
-  "scripts": {}
+  "scripts": {
+    "slots": "npm run dev -w slots",
+    "twb": "npm run dev -w two-way-binding"
+  }
 }
